# jh_guitar_tree

./: .gitattributes  .gitignore  README.md  build_debug.sh  build_log.txt  build_post.sh  build_release.sh  build_safe.sh  build_soundtouch.sh  build_soundtouch2.sh  build_soundtouch_win.bat  check_ffmpeg_sandbox_step5.sh  compile_commands.json  engine_call_map.txt  ffmpeg_step3_fixpaths.sh  firebase.json  firepit-log.txt  full_reset_and_clean.sh  lib_tree.txt  libsoundtouch_ffi_arm64.dylib  libsoundtouch_ffi_universal.dylib  libsoundtouch_ffi_x86_64.dylib  pubspec.yaml  remove_g_flag.sh  remove_g_flag_advanced.sh
android/app/: build.gradle.kts  google-services.json
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.dart  main.dart
lib/constants/: app_env.dart  app_keys.dart  app_strings.dart  app_styles.dart
lib/data/: local_hive_boxes.dart
linux/: CMakeLists.txt
macos/: Dummy.swift  Podfile  librubberband.3.dylib  libsamplerate.0.2.2.dylib  remove_g_flag.sh
macos_backup_0228/: Podfile  pubspec.yaml
native/: CMakeLists.txt  soundtouch_ffi.cpp  soundtouch_ffi.h
test/: widget_test.dart
universal_tmp/: libfftw3.3.dylib
web/: index.html  manifest.json
windows/: CMakeLists.txt
참조/: CHANGELOG.md  JH_GuitarTree 브랜치 전략 지침서.md  JH_GuitarTree 실전 적용 버전 관리 플랜.md  JH_GuitarTree_버전_확정.md  JH_Guitartree 설계서.md  JH_guitartree CHANGELOG.md  gitignore  jh_guitarTree 주요 파일 및 경로 설계.md  jh_guitartree_structure.md  jh_guitartree_프롬포트 구조.md  설계서 반영현황.md  작업진행 요약 기타트리.md  주요 파일 및 경로 설계.md
(+143 files in other folders)
